# WaveShareRelayBox

firmware/: CMakeLists.txt  README.md  build.sh  install.sh  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware/data/: index.html
firmware/examples/: mqtt_test.py  requirements.txt
firmware/main/: CMakeLists.txt  app_mqtt.h  idf_component.yml  main.c  mqtt_client.c  ota_update.c  ota_update.h  relay_control.c  relay_control.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
